# OpenCVStudySource

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opencvstudysource/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/opencvstudysource/: MainActivity.java  NDKUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/opencvstudysource/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
